--- a/index.css
+++ b/index.css
@@ -1,140 +1,131 @@
 :root {
-    --color-principal: red;
-    --color-secundario: blue;
+  --color-principal: red;
+  --color-secundario: blue;
 }
 
 body {
-    background-color: #fffbf7;
+  background-color: #fffbf7;
 }
 
 h1 {
-    color: #46484c;
-    text-align: center;
+  color: #025157;
+  font-family: "Alegreya", serif;
+  font-size: 60px;
+  margin-bottom: 24px;
 }
 
 p {
-    color: #8b8b8bcc;
-    font-family: verdana;
-    font-size: 20px;
+  color: #8b8b8bcc;
+  font-family: verdana;
+  font-size: 20px;
 }
 
 button {
-    color: #fff;
-    background-color: #025157;
+  color: #fff;
+  background-color: #025157;
 }
 
 #nav-img {
-    width: 150px;
-    height: 50px;
-    object-fit: contain;
-}
-
-.header {
-    margin: 20px 40px 140px;
-    font-size: 0;
+  width: 150px;
+  height: 50px;
+  object-fit: contain;
 }
 
 .parrafo {
-    display: block;
-    width: 50%;
-    line-height: 25px;
+  display: block;
+  line-height: 25px;
 }
 
 li {
-    display: inline;
-  }
+  display: inline;
+}
 
-  .header > * {
-    display: inline-block;
-    font-size: 16px;
-    vertical-align: middle;
-    height: 100%;
-    line-height: 45px;
-  }
+.header > * {
+  display: inline-block;
+  font-size: 16px;
+  vertical-align: middle;
+  height: 100%;
+  line-height: 45px;
+}
 
+.logo {
+  width: 15%;
+}
+.logo > img {
+  width: 100%;
+}
 
-  .logo {
-    width: 15%;
-  }
-  .logo > * {
-    width: 30%;
-    height: 100%;
-    object-fit: contain;
-  }
-  
-  .navbar {
-    width: 70%;
-    text-align: center;
-    color: #025157;
-  }
+/* .navbar {
+  width: 70%;
+  text-align: left;
+  color: #025157;
+  font-weight: 500;
+} */
 
-  .header {
-    margin-top: 40px;
-    margin-left: 20px;
-    margin-right: 20px;
-    font-size: 0;
-    height: 45px;
-    font-family: sans-serif;
-  }
+.header {
+  margin: 40px 20px 0;
+  font-size: 0;
+  height: 45px;
+  font-family: sans-serif;
+}
 
-  
-  .menu-item {
-    display: inline;
-    margin-right: 25px;
-    margin-left: 25px;
-  }
-  
-  .actions {
-    width: 15%;
-    text-align: right;
-    font-size: 14px;
-    font-weight: 600;
-  }
+.menu-item {
+  display: inline;
+  margin-right: 25px;
+  margin-left: 25px;
+}
 
-  .actions > * {
-    margin-right: 10px;
-    margin-left: 10px;
-  }
-  
-  .actions a {
-    color: #67b54b;
-  }
-  
-  .actions button {
-    color: white;
-    background-color: #67b54b;
-    padding: 12px 14px;
-    border: 0;
-    border-radius: 5px;
-  }
+.actions {
+  width: 15%;
+  text-align: right;
+  font-size: 14px;
+  font-weight: 600;
+}
 
-  .publish {
-    /* container styles if any */
-    margin-left: 32px
-  }
-  
-  .publish h3 {
-    font-family: "Alegreya", serif;
-    font-size: 40px;
-    line-height: 48px;
-    color: #025157;
-  }
-  
-  .publish > p {
-    font-size: 16px;
-    color: #343434;
-    line-height: 1.5;
-    margin-bottom: 20px;
-  }
-  
-  .publish > form {
-    display: flex;
-  }
-  
-  .publish > form p {
-    color: #025157;
-    margin-right: 18px;
-  }
+.actions > * {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.actions a {
+  color: #67b54b;
+}
+
+.actions button {
+  color: white;
+  background-color: #67b54b;
+  padding: 12px 14px;
+  border: 0;
+  border-radius: 5px;
+}
+
+.publish {
+  /* container styles if any */
+  margin-left: 32px;
+}
+
+.publish h3 {
+  font-family: "Alegreya", serif;
+  font-size: 40px;
+  line-height: 48px;
+  color: #025157;
+}
+
+.publish > p {
+  font-size: 16px;
+  color: #343434;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.publish > form {
+  display: flex;
+}
+
+.publish > form p {
+  color: #025157;
+  margin-right: 18px;
+}
 
 .promo {
   display: flex;
@@ -164,4 +155,165 @@ li {
 .main {
   margin-top: 285px;
   text-align: center;
+}
+
+.features-custom {
+  display: grid;
+  grid-template: repeat(3, 330px) / repeat(4, 1fr);
+  grid-template-areas:
+    "main header header header"
+    "main sidebar sidebar ."
+    "footer footer footer footer";
+}
+
+.features-custom > :nth-child(1) {
+  background-color: aqua;
+  grid-area: header;
+}
+
+.features-custom > :nth-child(2) {
+  background-color: red;
+  grid-area: main;
+}
+
+.features-custom > :nth-child(3) {
+  background-color: green;
+  grid-area: sidebar;
+  position: relative;
+}
+
+.features-custom > :nth-child(3) > img {
+  width: 300px;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.features-custom > :nth-child(4) {
+  background-color: yellow;
+  grid-area: footer;
+}
+
+.features {
+  display: grid;
+  grid-template: repeat(2, 330px) / repeat(2, 1fr);
+}
+.features {
+  background-color: #025157;
+  padding: 5% 10%;
+  display: grid;
+  grid-template: repeat(2, 330px) / repeat(2, 1fr);
+}
+
+.features .feature-card {
+  margin-bottom: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
+  background-color: #fff;
+  border: 1px solid #dadada;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+
+.features .feature-card .feature-content {
+  padding: 30px 20px 40px 40px;
+  flex: 2;
+}
+
+.features .feature-card .feature-content > * {
+  margin-bottom: 1rem;
+  margin-top: 0;
+}
+
+.features .feature-card .feature-content img {
+  width: 50px;
+}
+
+.features .feature-card .feature-content h3 {
+  font-size: 24px;
+  color: #343434;
+  font-weight: 400;
+}
+
+.features .feature-card .feature-content p {
+  font-size: 16px;
+  color: #7e7e7e;
+  font-weight: 400;
+}
+
+.features .feature-card .feature-content a {
+  font-size: 16px;
+  color: #67b54b;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.features .feature-card .feature-image {
+  flex: 1;
+  width: 40%;
+  position: relative;
+  right: -50px;
+  height: 80%;
+}
+
+.features .feature-card .feature-image figure,
+.features .feature-card .feature-image img {
+  margin-top: 0;
+  height: 100%;
+}
+
+@media (max-width: 575px) {
+  .actions {
+    display: none!important;
+  }
+  .main {
+    margin-top: 130px;
+  }
+  .header {
+    margin: 20px 40px 0;
+  }
+  h1 {
+    font-size: 30px;
+  }
+  .banner > img {
+    width: 100%;
+  }
+  .promo {
+    flex-direction: column;
+    max-width: 90%;
+  }
+
+  .explanatory-video > video {
+    width: 100%;
+  }
+
+  .publish {
+    margin-left: 0;
+  }
+
+  .publish > form {
+    flex-direction: column;
+  }
+
+  .publish > h3 {
+    font-size: 25px;
+    line-height: 1.2;
+  }
+
+  .features {
+    grid-template: repeat(4, 1fr) / 1fr;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .features .feature-card .feature-image {
+    display: none;
+  }
+
+  .feature-content > figure {
+    display: none
+  }
 }
