--- a/index.css
+++ b/index.css
@@ -48,6 +48,29 @@ li {
   line-height: 45px;
 }
 
+.hero {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  background-color: #343434;
+  background-image: url(imgs/Cat-expression-1.jpg);
+  background-repeat: no-repeat;
+  background-position: 10px center;
+  background-size: cover;
+}
+
+.conEm {
+  font-size: 2em;
+}
+
+.conRem {
+  font-size: 2rem;
+}
+
 .logo {
   width: 15%;
 }
